# AiCmp

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: agent_loop.rs  mod.rs  providers.rs  tools.rs
src-tauri/src/commands/: agent_cmd.rs  dir_ops.rs  file_ops.rs  git_ops.rs  mod.rs  settings.rs
src-tauri/src/diff/: engine.rs  mod.rs
src-tauri/src/git/: mod.rs  operations.rs
src-tauri/src/scanner/: dir_scanner.rs  mod.rs
src/components/AiBar/: AiBar.tsx
src/components/DirCompare/: DirTree.tsx
src/components/FileCompare/: DiffEditor.tsx
src/components/Layout/: Toolbar.tsx
src/components/Settings/: SettingsDialog.tsx
src/stores/: appStore.ts
