[package]
name = "ai-cmp"
version = "0.1.0"
description = "AI-powered file comparison tool"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_cmp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
walkdir = "2"
blake3 = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
uuid = { version = "1", features = ["v4"] }
